--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -28,7 +28,7 @@
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			{% if site.data.settings.CTAs.first_CTA_text and site.data.settings.CTAs.first_CTA_URL != null %}
-			<li><a class="cta" href="{{site.data.settings.CTAs.first_CTA_URL}}" target="_blank">{{site.data.settings.CTAs.third_CTA_text}}</a></li>
+			<li><a class="cta" href="{{site.data.settings.CTAs.third_CTA_URL}}" target="_blank">{{site.data.settings.CTAs.third_CTA_text}}</a></li>
 			<li>
 				{% if site.data.settings.CTAs.first_CTA_URL == '/homevalue/' %}
 				<a class="cta" href="{{site.data.settings.CTAs.first_CTA_URL}}">
